--- a/frontend/src/app/panel/sidebar/sidebar.component.html
+++ b/frontend/src/app/panel/sidebar/sidebar.component.html
@@ -18,31 +18,31 @@
                 </a>
             </li>
             <li>
-                <a routerLink = "/stations">
+                <a routerLink = "/stations" routerLinkActive = "active">
                     <span><i class = "bi bi-flag"></i></span>
                     <span> Stations </span> 
                 </a>
             </li>
             <li>
-                <a routerLink = "/fleets">
+                <a routerLink = "/fleets" routerLinkActive = "active">
                     <span><i class = "bi bi-diagram-3"></i></span>
                     <span> Fleets </span>
                 </a>
             </li>
             <li>
-                <a routerLink = "/drivers">
+                <a routerLink = "/drivers" routerLinkActive = "active">
                     <span><i class="bi bi-stoplights"></i></span>
                     <span> Drivers </span>
                 </a>
             </li>
             <li>
-                <a routerLink = "/passengers">
+                <a routerLink = "/passengers" routerLinkActive = "active">
                     <span><i class = "bi bi-person-bounding-box"></i></span>
                     <span> Passengers </span>
                 </a>
             </li>
             <li>
-                <a routerLink = "/trips">
+                <a routerLink = "/trips" routerLinkActive = "active">
                     <span><i class = "bi bi-cursor"></i></span>
                     <span> Trips </span>
                 </a>
