--- a/frontend/src/app/home/stations/stations.component.html
+++ b/frontend/src/app/home/stations/stations.component.html
@@ -1,1 +1,9 @@
+<div class = "container">
+    <div class = "content">
+
+        <!-- Sub-content-1 -->
+        <app-show-delete-station [parentData] = "headerInfo"></app-show-delete-station>
+
+    </div>
+</div>
 
