--- a/frontend/src/app/home/drivers/drivers.component.html
+++ b/frontend/src/app/home/drivers/drivers.component.html
@@ -1,1 +1,10 @@
+<div class = "container">
 
+    <div class = "content">
+
+        <!-- Sub-content-1 -->
+        <app-show-delete-driver [parentData] = "headerInfo"></app-show-delete-driver>
+
+    </div>
+
+</div>
