--- a/frontend/src/app/home/fleets/fleets.component.html
+++ b/frontend/src/app/home/fleets/fleets.component.html
@@ -1,1 +1,8 @@
+<div class = "container">
+    <div class = "content">
 
+        <!-- Sub-content-1 -->
+        <app-show-delete-fleet [parentData] = "headerInfo"></app-show-delete-fleet>
+
+    </div>
+</div>
