--- a/frontend/src/app/home/trips/trips.component.html
+++ b/frontend/src/app/home/trips/trips.component.html
@@ -1,1 +1,10 @@
+<div class = "container">
 
+    <div class = "content">
+
+        <!-- Sub-content-1 -->
+        <app-show-delete-trip [parentData] = "headerInfo"></app-show-delete-trip>
+
+    </div>
+    
+</div>
