--- a/frontend/src/app/home/dashboard/dashboard.component.html
+++ b/frontend/src/app/home/dashboard/dashboard.component.html
@@ -1,1 +1,144 @@
+<div class = "container">
 
+    <div class = "content">
+
+        <!-- First card -->
+        <div class = "card">
+
+            <div class = "card-body panel-0 rounded">
+
+                <!-- Sub-content-1 -->
+                <div class = "d-flex justify-content-between">
+
+                    <!-- Title and description -->
+                            
+                    <div class = "header">
+                        <h5>
+                            <span><i class = "bi bi-border-all"></i></span>
+                            <span class = "font-weight-bolder"> {{ headerInfo.headerTitle }} </span>
+                            <p> {{ headerInfo.headerDescription }} </p>
+                        </h5>
+                    </div>
+                
+                    <!-- Add a new data -->
+                    <div class = "header">
+                        <button class = "btn btn-outline-light float-right font-weight-bolder" data-toggle = "modal" data-target = "#addEditModal" data-backdrop = "static" data-keyboard = "false">
+                            <span><i class = "bi bi-filter"></i></span>
+                            <span> {{ headerInfo.headerBtn }} </span> 
+                        </button>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Second card -->
+        <div class = "card">
+
+            <div class = "card-body panel-1">
+
+                <div class = "row">
+
+                    <!-- Map -->
+                    <div class = "col-10">
+                        <div class = "card">
+                            <div class = "card-body" id = "map">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Stats -->
+                    <div class = "col-2">
+
+                        <div class = "row">
+
+                            <!-- First stat-->
+                            <div class = "col-12">
+                                <div class = "card text-center font-weight-bolder">
+                                    <div class = "card-body rounded">
+                                        <p class = "card-title"> Trips </p>
+                                        <p class = "card-text text-center"> {{ tripsList.length }} </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Second stat -->
+                            <div class = "col-12">
+                                <div class = "card text-center font-weight-bolder">
+                                    <div class = "card-body rounded">
+                                        <p class = "card-title"> Distance </p>
+                                        <p class = "card-text text-center"> {{ tripsInfo.distance }} Km </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Third stat -->
+                            <div class = "col-12">
+                                <div class = "card text-center font-weight-bolder">
+                                    <div class = "card-body rounded">
+                                        <p class = "card-title"> Mships </p>
+                                        <p class = "card-text"> {{ commutersList.length }} </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Third stat -->
+                            <div class = "col-12">
+                                <div class = "card text-center font-weight-bolder">
+                                    <div class = "card-body rounded">
+                                        <p class = "card-title"> Time </p>
+                                        <p class = "card-text text-center"> {{ tripsInfo.duration }} H </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Graphs -->
+
+        <div class = "card">
+
+            <div class = "card-body panel-1">
+
+                <div class = "row">
+
+                    <div class = "col-6">
+                        <div class = "card">
+                            <div class = "card-body">
+                                <p class = "card-title"> Card Stats </p>
+                                <p class = "card-text"> 375 </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class = "col-6">
+                        <div class = "card">
+                            <div class = "card-body">
+                                <p class = "card-title"> Card Stats </p>
+                                <canvas id = "myDonutChart" class = "chart">
+                                    
+                                </canvas>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
