--- a/frontend/src/app/home/dashboard/dashboard.component.css
+++ b/frontend/src/app/home/dashboard/dashboard.component.css
@@ -2,3 +2,41 @@
     margin-left: 200px;
 }
 
+.content .card {
+    margin-top: 15px;
+}
+
+.content .card .panel-0 {
+    height: 85px;
+    background-color: #00b4d8;
+    color: #FFF;
+    border: 1px solid #00b4d8;
+}
+
+.content .card .panel-0 button:hover {
+    color: #00b4d8;
+}
+
+.content .panel-1 {
+    margin-top: -10px;
+}
+
+.content .card .col-10 .card-body {
+    height: 451px;
+}
+/*
+.content .card .col-2 .card-body {
+    background-color: #4361ee;
+}
+*/
+
+.content .card .card-body .header p {
+    font-size: 15px;
+    padding-left: 25px;
+}
+
+.content .card .card-body .header button {
+    height: 40px;
+}
+
+
