--- a/frontend/src/app/home/dashboard/dashboard.component.html
+++ b/frontend/src/app/home/dashboard/dashboard.component.html
@@ -117,7 +117,43 @@
                         <div class = "card">
                             <div class = "card-body">
                                 <p class = "card-title"> Card Stats </p>
-                                <p class = "card-text"> 375 </p>
+                                <canvas id = "myDonutChart" class = "chart">
+                                    
+                                </canvas>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class = "col-6">
+                        <div class = "card">
+                            <div class = "card-body">
+                                <p class = "card-title"> Card Stats </p>
+                                <canvas id = "myDonutChart" class = "chart">
+                                    
+                                </canvas>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+      
+        <div class = "card">
+
+            <div class = "card-body panel-1">
+
+                <div class = "row">
+
+                    <div class = "col-6">
+                        <div class = "card">
+                            <div class = "card-body">
+                                <p class = "card-title"> Card Stats </p>
+                                <canvas id = "myDonutChart" class = "chart">
+                                    
+                                </canvas>
                             </div>
                         </div>
                     </div>
