--- a/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
+++ b/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
@@ -11,14 +11,14 @@
           <div class = "header">
               <h5>
                   <span><i class = "bi bi-flag"></i></span>
-                  <span class = "font-weight-bolder"> {{ parentData.headerTitle }} </span>
+                  <span class = "fw-bold"> {{ parentData.headerTitle }} </span>
                   <p> {{ parentData.headerDescription }} </p>
               </h5>
           </div>
       
           <!-- Add a new data -->
           <div class = "header">
-              <button class = "btn btn-outline-light float-right font-weight-bolder" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-backdrop = "static" data-keyboard = "false" (click) = "addClick()">
+              <button class = "btn btn-outline-light float-right fw-bold" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-backdrop = "static" data-keyboard = "false" (click) = "addClick()">
                   <span><i class = "bi bi-plus"></i></span>
                   <span> {{ parentData.headerBtn }} </span> 
               </button>
