--- a/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.css
+++ b/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.css
@@ -43,6 +43,10 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
 }
 
+table td button {
+    margin-left: 10px;
+}
+
 .card .table tbody tr .btn-danger {
     background-color: #E63946;
 }
