--- a/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
+++ b/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
@@ -61,7 +61,7 @@
               <button class = "btn btn-danger" data-bs-toggle = "modal" data-bs-target = "#deleteModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "deleteClick(stationData)">
                 <i class = "bi bi-trash"></i>
               </button>
-              <button class = "btn btn-info" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "editClick(stationData)">
+              <button class = "text-light btn btn-info" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "editClick(stationData)">
                 <i class = "bi bi-pencil"></i>
               </button>
             </td>  
