--- a/frontend/src/app/home/fleets/add-edit-fleet/add-edit-fleet.component.html
+++ b/frontend/src/app/home/fleets/add-edit-fleet/add-edit-fleet.component.html
@@ -1,30 +1,30 @@
 <form>
 
-  <div class = "row form-group">
+  <div class = "row form-group mb-3">
       <div class = "col-6 form-group">
-          <label for = "size" class = "font-weight-bolder"> Size </label>
+          <label for = "size" class = "fw-bold"> Size </label>
           <input type = "size" class = "form-control" placeholder = "Enter fleet size" id = "size" [(ngModel)] = "fleet.size" [ngModelOptions] = "{standalone: true}">
         </div>
         <div class = "col-6 form-group">
-          <label for = "brand" class = "font-weight-bolder"> Brand </label>
+          <label for = "brand" class = "fw-bold"> Brand </label>
           <input type = "brand" class = "form-control" placeholder = "Enter brand name" id = "brand name" [(ngModel)] = "fleet.brand" [ngModelOptions] = "{standalone: true}">
         </div>  
   </div>
 
-  <div class = "row form-group">
+  <div class = "row form-group mb-3">
       <div class = "col-6 form-group">
-          <label for = "type" class = "font-weight-bolder"> Type </label>
+          <label for = "type" class = "fw-bold"> Type </label>
           <input type = "type" class = "form-control" placeholder = "Enter type" id = "type" [(ngModel)] = "fleet.fleet_type" [ngModelOptions] = "{standalone: true}">
         </div>
         <div class = "col-6 form-group">
-          <label for = "model" class = "font-weight-bolder"> Model </label>
+          <label for = "model" class = "fw-bold"> Model </label>
           <input type = "model" class = "form-control" placeholder = "Enter model" id = "model" [(ngModel)] = "fleet.fleet_model" [ngModelOptions] = "{standalone: true}">
         </div>  
   </div>
 
   <div class = "row mb-3">
     <div class = "col-12 form-group">
-      <label for = "station" class = "font-weight-bolder"> Select Station </label>
+      <label for = "station" class = "fw-bold"> Select Station </label>
       <select class = "form-control" id = "station" [(ngModel)] = "fleet.station" [ngModelOptions] = "{standalone: true}">
         <option> -- Choose a Station -- </option>
         <option *ngFor = "let stationName of stationsNames">
@@ -34,12 +34,12 @@
     </div>  
   </div>
 
-  <button (click) = "addFleet()" *ngIf = "fleet.id == 0" class = "btn btn-primary w-100">
+  <button (click) = "addFleet()" *ngIf = "fleet.id == 0" class = "btn btn-primary w-100 mt-3 mb-3">
     <span><i class = "bi bi-plus"></i></span>
     <span> Add </span>
   </button>
 
-  <button (click) = "updateFleet()" *ngIf = "fleet.id != 0" class = "btn btn-primary w-100">
+  <button (click) = "updateFleet()" *ngIf = "fleet.id != 0" class = "btn btn-primary w-100 mt-3 mb-3">
     <span><i class = "bi bi-plus"></i></span>
     <span> Update </span>
   </button>
