--- a/frontend/src/app/home/passengers/show-delete-passenger/show-delete-passenger.component.css
+++ b/frontend/src/app/home/passengers/show-delete-passenger/show-delete-passenger.component.css
@@ -52,6 +52,10 @@
     border-color: #7d4c9e;
 }
 
+table td button {
+    margin-left: 10px;
+}
+
 .card .table tbody {
     border-style: none;
 }
