--- a/frontend/src/app/home/dashboard/dashboard.component.html
+++ b/frontend/src/app/home/dashboard/dashboard.component.html
@@ -4,22 +4,17 @@
 
         <!-- First card -->
         <div class = "card">
-
             <div class = "card-body panel-0 rounded">
-
                 <!-- Sub-content-1 -->
                 <div class = "d-flex justify-content-between">
-
-                    <!-- Title and description -->
-                            
+                    <!-- Title and description -->                     
                     <div class = "header">
                         <h5>
                             <span><i class = "bi bi-border-all"></i></span>
                             <span class = "font-weight-bolder"> {{ headerInfo.headerTitle }} </span>
                             <p> {{ headerInfo.headerDescription }} </p>
                         </h5>
-                    </div>
-                
+                    </div>             
                     <!-- Add a new data -->
                     <div class = "header">
                         <button class = "btn btn-outline-light float-right font-weight-bolder" data-toggle = "modal" data-target = "#addEditModal" data-backdrop = "static" data-keyboard = "false">
@@ -27,20 +22,14 @@
                             <span> {{ headerInfo.headerBtn }} </span> 
                         </button>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
 
         <!-- Second card -->
         <div class = "card">
-
             <div class = "card-body panel-1">
-
                 <div class = "row">
-
                     <!-- Map -->
                     <div class = "col-10">
                         <div class = "card">
@@ -49,12 +38,9 @@
                             </div>
                         </div>
                     </div>
-
                     <!-- Stats -->
                     <div class = "col-2">
-
                         <div class = "row">
-
                             <!-- First stat-->
                             <div class = "col-12">
                                 <div class = "card text-center font-weight-bolder">
@@ -64,7 +50,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <!-- Second stat -->
                             <div class = "col-12">
                                 <div class = "card text-center font-weight-bolder">
@@ -74,7 +59,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <!-- Third stat -->
                             <div class = "col-12">
                                 <div class = "card text-center font-weight-bolder">
@@ -84,8 +68,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- Third stat -->
+                            <!-- Fourth stat -->
                             <div class = "col-12">
                                 <div class = "card text-center font-weight-bolder">
                                     <div class = "card-body rounded">
@@ -94,11 +77,8 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
                     </div>
-
                 </div>
 
             </div>
@@ -108,71 +88,53 @@
         <!-- Graphs -->
 
         <div class = "card">
-
             <div class = "card-body panel-1">
-
                 <div class = "row">
-
                     <div class = "col-6">
                         <div class = "card">
                             <div class = "card-body">
                                 <p class = "card-title"> Card Stats </p>
-                                <canvas id = "myDonutChart" class = "chart">
-                                    
+                                <canvas id = "myDonutChart" class = "chart">                            
                                 </canvas>
                             </div>
                         </div>
                     </div>
-
                     <div class = "col-6">
                         <div class = "card">
                             <div class = "card-body">
                                 <p class = "card-title"> Card Stats </p>
-                                <canvas id = "myDonutChart" class = "chart">
-                                    
+                                <canvas id = "myDonutChart" class = "chart">                          
                                 </canvas>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
       
         <div class = "card">
-
             <div class = "card-body panel-1">
-
                 <div class = "row">
-
                     <div class = "col-6">
                         <div class = "card">
                             <div class = "card-body">
                                 <p class = "card-title"> Card Stats </p>
-                                <canvas id = "myDonutChart" class = "chart">
-                                    
+                                <canvas id = "myDonutChart" class = "chart">                         
                                 </canvas>
                             </div>
                         </div>
                     </div>
-
                     <div class = "col-6">
                         <div class = "card">
                             <div class = "card-body">
                                 <p class = "card-title"> Card Stats </p>
-                                <canvas id = "myDonutChart" class = "chart">
-                                    
+                                <canvas id = "myDonutChart" class = "chart">                                   
                                 </canvas>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
 
     </div>
