--- a/frontend/src/app/home/drivers/show-delete-driver/show-delete-driver.component.html
+++ b/frontend/src/app/home/drivers/show-delete-driver/show-delete-driver.component.html
@@ -1,14 +1,10 @@
 
 <!-- First card -->
 <div class = "card">
-
   <div class = "card-body panel-0 rounded">
-
       <!-- Sub-content-1 -->
       <div class = "d-flex justify-content-between">
-
-          <!-- Title and description -->
-                  
+          <!-- Title and description -->                  
           <div class = "header">
               <h5>
                   <span><i class = "bi bi-stoplights"></i></span>
@@ -16,7 +12,6 @@
                   <p> {{ parentData.headerDescription }} </p>
               </h5>
           </div>
-      
           <!-- Add a new data -->
           <div class = "header">
               <button class = "btn btn-outline-light float-right fw-bold" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "addClick()">
@@ -24,57 +19,47 @@
                   <span> {{ parentData.headerBtn }} </span> 
               </button>
           </div>
-
       </div>
-
   </div>
-
 </div>
   
-  <!-- Sub-content-2 -->
-  <div class = "card">
-  
-    <div class = "card-body">
-  
-      <!-- Table -->
-      <table class = "table">
-          <thead class = "pl-4">
-            <tr>
-              <th class = "text-center"> # </th>
-              <th> Name </th>
-              <th> Phone </th>
-              <th> Email </th>
-              <th> Trip </th>
-              <th class = "text-center"> Actions </th>
-            </tr>
-          </thead>
+<!-- Second card -->
+<div class = "card">
+  <div class = "card-body">
+    <!-- Table -->
+    <table class = "table">
+        <thead class = "pl-4">
+          <tr>
+            <th class = "text-center"> # </th>
+            <th> Name </th>
+            <th> Phone </th>
+            <th> Email </th>
+            <th> Trip </th>
+            <th class = "text-center"> Actions </th>
+          </tr>
+        </thead>
+        <br/>
+        <tbody *ngFor = "let driverData of driversList">
+          <tr>
+            <td class = "text-center"> {{ driverData.id }} </td>
+            <td> {{ driverData.name | titlecase }} </td>
+            <td> {{ driverData.phone }} </td>
+            <td> {{ driverData.email  }} </td>
+            <td> {{ driverData.trip | titlecase }} </td>
+            <td class = "text-center">
+              <button class = "btn btn-danger mr-2" data-bs-toggle = "modal" data-bs-target = "#deleteModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "deleteClick(driverData)">
+                <i class = "bi bi-trash"></i>
+              </button>
+              <button class = "text-light btn btn-info" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "editClick(driverData)">
+                <i class = "bi bi-pencil"></i>
+              </button>
+            </td>  
+          </tr>
           <br/>
-  
-          <tbody *ngFor = "let driverData of driversList">
-            
-            <tr>
-              <td class = "text-center"> {{ driverData.id }} </td>
-              <td> {{ driverData.name | titlecase }} </td>
-              <td> {{ driverData.phone }} </td>
-              <td> {{ driverData.email  }} </td>
-              <td> {{ driverData.trip | titlecase }} </td>
-              <td class = "text-center">
-                <button class = "btn btn-danger mr-2" data-bs-toggle = "modal" data-bs-target = "#deleteModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "deleteClick(driverData)">
-                  <i class = "bi bi-trash"></i>
-                </button>
-                <button class = "text-light btn btn-info" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "editClick(driverData)">
-                  <i class = "bi bi-pencil"></i>
-                </button>
-              </td>  
-            </tr>
-            <br/>
-            
-          </tbody>
-        </table>
-  
+        </tbody>
+      </table>
     </div>
-  
-  </div>
+</div>
   
   <!-- Modals -->
   
