--- a/frontend/src/app/home/fleets/show-delete-fleet/show-delete-fleet.component.html
+++ b/frontend/src/app/home/fleets/show-delete-fleet/show-delete-fleet.component.html
@@ -1,21 +1,16 @@
 <!-- First card -->
 <div class = "card">
-
   <div class = "card-body panel-0 rounded">
-
       <!-- Sub-content-1 -->
       <div class = "d-flex justify-content-between">
-
-          <!-- Title and description -->
-                  
+          <!-- Title and description -->             
           <div class = "header">
               <h5>
                   <span><i class = "bi bi-diagram-3"></i></span>
                   <span class = "fw-bold"> {{ parentData.headerTitle }} </span>
                   <p> {{ parentData.headerDescription }} </p>
               </h5>
-          </div>
-      
+          </div>     
           <!-- Add a new data -->
           <div class = "header">
               <button class = "btn btn-outline-light float-right fw-bold" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-bs-backdrop = "static" data-bs-keyboard = "false" (click) = "addClick()">
@@ -23,18 +18,13 @@
                   <span> {{ parentData.headerBtn }} </span> 
               </button>
           </div>
-
       </div>
-
   </div>
-
 </div>
 
-<!-- Sub-content-2 -->
+<!-- Second card -->
 <div class = "card">
-
   <div class = "card-body">
-
     <!-- Table -->
     <table class = "table">
         <thead class = "pl-4">
@@ -49,9 +39,7 @@
           </tr>
         </thead>
         <br/>
-
-        <tbody *ngFor = "let fleetData of fleetsList">
-          
+        <tbody *ngFor = "let fleetData of fleetsList">   
           <tr>
             <td class = "text-center"> {{ fleetData.id }} </td>
             <td> {{ fleetData.size }} </td>
@@ -68,22 +56,19 @@
               </button>
             </td>  
           </tr>
-          <br/>
-          
+          <br/>   
         </tbody>
       </table>
-
   </div>
-
 </div>
 
 <!-- Modals -->
 
 <!-- AddEdit Modal -->
 <div class = "modal fade" id = "addEditModal">
+  
   <div class = "modal-dialog modal-dialog-centered">
     <div class = "modal-content container">
-    
       <!-- Modal Header -->
       <div class = "modal-header">
         <h5 class = "modal-title">
@@ -96,8 +81,8 @@
       <!-- Modal body -->
       <div class = "modal-body">
         <app-add-edit-fleet [fleet] = "fleet" *ngIf = "ActivateAddEditFleetComp"></app-add-edit-fleet>
-      </div>
-      
+      </div>     
     </div>
   </div>
+  
 </div>
