--- a/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
+++ b/frontend/src/app/home/stations/show-delete-station/show-delete-station.component.html
@@ -1,21 +1,16 @@
 <!-- First card -->
 <div class = "card">
-
   <div class = "card-body panel-0 rounded">
-
       <!-- Sub-content-1 -->
       <div class = "d-flex justify-content-between">
-
-          <!-- Title and description -->
-                  
+          <!-- Title and description -->                
           <div class = "header">
               <h5>
                   <span><i class = "bi bi-flag"></i></span>
                   <span class = "fw-bold"> {{ parentData.headerTitle }} </span>
                   <p> {{ parentData.headerDescription }} </p>
               </h5>
-          </div>
-      
+          </div>   
           <!-- Add a new data -->
           <div class = "header">
               <button class = "btn btn-outline-light float-right fw-bold" data-bs-toggle = "modal" data-bs-target = "#addEditModal" data-backdrop = "static" data-keyboard = "false" (click) = "addClick()">
@@ -23,18 +18,13 @@
                   <span> {{ parentData.headerBtn }} </span> 
               </button>
           </div>
-
       </div>
-
   </div>
-
 </div>
 
-<!-- Sub-content-2 -->
+<!-- Second card -->
 <div class = "card">
-
   <div class = "card-body">
-
     <!-- Table -->
     <table class = "table">
         <thead class = "pl-4">
@@ -48,9 +38,7 @@
           </tr>
         </thead>
         <br/>
-
-        <tbody *ngFor = "let stationData of stationsList">
-          
+        <tbody *ngFor = "let stationData of stationsList">          
           <tr>
             <td class = "text-center"> {{ stationData.id }} </td>
             <td> {{ stationData.name | titlecase }} </td>
@@ -66,23 +54,19 @@
               </button>
             </td>  
           </tr>
-          <br/>
-          
+          <br/>          
         </tbody>
-
       </table>
-
   </div>
-
 </div>
 
 <!-- Modals -->
 
 <!-- AddEdit Modal -->
-<div class = "modal fade" id = "addEditModal">
+<div class = "modal fade" id = "addEditModal">  
   <div class = "modal-dialog modal-dialog-centered">
     <div class = "modal-content container">
-    
+      
       <!-- Modal Header -->
       <div class = "modal-header">
         <h5 class = "modal-title">
